# toy-robot

./: .gitattributes  Dockerfile  README.md  app.py  main.py  pyproject.toml  robot.py  surface.py  test.py
libs/direction/: direction.py  direction_factory.py  east.py  north.py  south.py  west.py
libs/location/: location.py
libs/surface/: surface.py  table.py
scripts/: app.py  custom_parser.py
tests/: test_robot.py
tests/coverage/: index.html  libs___init___py.html  libs_direction___init___py.html  libs_direction_direction_factory_py.html  libs_direction_direction_py.html  libs_direction_east_py.html  libs_direction_north_py.html  libs_direction_south_py.html  libs_direction_west_py.html  libs_location___init___py.html  libs_location_location_py.html  libs_surface___init___py.html  libs_surface_surface_py.html  libs_surface_table_py.html  status.json  tests___init___py.html  tests_test_robot_py.html  toy___init___py.html  toy_robot_py.html
toy/: robot.py
