[tool.poetry]
name = "ToyRobot"
version = "1.1.0"
description = "Toy robot command line app"
authors = ["Saleh Al-Zaubi"]

[tool.poetry.dependencies]
python = "^3.8.10"
pytest = "^6.2.4"

[tool.coverage.run]
omit = [
    "main.py",
    "scripts/*"
    ]

[tool.coverage.report]
exclude_lines = ["pass"]